--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,7 @@
 <project name="ibio" default="jar" basedir=".">
   <target name="compile">
     <mkdir dir="ibio"/>
-    <javac srcdir="." destdir="ibio"/>
+    <javac includeantruntime="false" srcdir="." destdir="ibio"/>
   </target>
   <target name="jar" depends="compile">
     <jar destfile="ibio.jar" basedir="ibio">
